fixed right alignment navbar

--- a/css/custom.css
+++ b/css/custom.css
@@ -44,8 +44,8 @@ body,div,img {
 	width: 915px;
 }
 
-#menu {
-	width: 905px;
+#menu>div.container {
+	width: 909px;
 	visibility: visible;
 	position: relative;
 }
@@ -106,6 +106,9 @@ p.navbar-brand,
 	color: #000;
 }
 
+ul.nav.navbar-nav{
+	margin-left:41px;
+}
 ul.nav.navbar-nav li {
 	height: 50px;
 }
@@ -154,4 +157,8 @@ a>div.hr-line>p {
 a:hover.dropdown-toggle,
 a:focus.dropdown-toggle{
 	background-color: white;
+}
+
+div.navbar-collapse.collapse{
+	width:1000px;
 }
